; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/s390/hypfs/extr_hypfs_diag.c_diag204_alloc_vbuf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/s390/hypfs/extr_hypfs_diag.c_diag204_alloc_vbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGE_SIZE = common dso_local global i32 0, align 4
@diag204_buf_vmalloc = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@diag204_buf = common dso_local global i8* null, align 8
@diag204_buf_pages = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @diag204_alloc_vbuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @diag204_alloc_vbuf(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* @PAGE_SIZE, align 4
  %5 = load i32, i32* %3, align 4
  %6 = add nsw i32 %5, 1
  %7 = mul nsw i32 %4, %6
  %8 = call i32 @vmalloc(i32 %7)
  store i32 %8, i32* @diag204_buf_vmalloc, align 4
  %9 = load i32, i32* @diag204_buf_vmalloc, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %1
  %12 = load i32, i32* @ENOMEM, align 4
  %13 = sub nsw i32 0, %12
  %14 = call i8* @ERR_PTR(i32 %13)
  store i8* %14, i8** %2, align 8
  br label %20

15:                                               ; preds = %1
  %16 = load i32, i32* @diag204_buf_vmalloc, align 4
  %17 = call i8* @page_align_ptr(i32 %16)
  store i8* %17, i8** @diag204_buf, align 8
  %18 = load i32, i32* %3, align 4
  store i32 %18, i32* @diag204_buf_pages, align 4
  %19 = load i8*, i8** @diag204_buf, align 8
  store i8* %19, i8** %2, align 8
  br label %20

20:                                               ; preds = %15, %11
  %21 = load i8*, i8** %2, align 8
  ret i8* %21
}

declare dso_local i32 @vmalloc(i32) #1

declare dso_local i8* @ERR_PTR(i32) #1

declare dso_local i8* @page_align_ptr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
